<resources>
    <string name="app_name">Floppy</string>

    <string name="installApk">Instalar</string>
    <string name="openApk">Abrir</string>

    <string name="comenzar">Comenzar</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrar</string>
    <string name="online">Conectado</string>
    <string name="offline">Desconectado</string>
    <string name="nick">Apodo</string>

    <string name="addSticker">Añade un sticker</string>
    <string name="howAddSticker">Ingresa la url de una imagen</string>
    <string name="downloadFloppySticker">Descargar app</string>
    <string name="poor">(No puedes subir imagenes porque no tenemos servidor para guardarlas somos pobres 🙄 )
    \nSi quieres descarga nuestra aplicacion de stickers
    </string>

    <string name="stickers">Tus stickers</string>
    <string name="registro">Registro</string>
    <string name="estado">Estados</string>
    <string name="chat">Chats</string>
    <string name="Grupos">Grupos</string>
    <string name="Settings">Ajustes</string>
    <string name="buscar">Buscar..</string>
    <string name="Bienvenido">Bienvenido!!</string>
    <string name="Bienvenido2">Bienvenido a\nFloppy</string>
    <string name="iniciar">Iniciar</string>
    <string name="pass_user">Contraseña</string>
    <string name="email_user">Ejemplo@floppy.com</string>
    <string name="codigo">Codigo</string>
    <string name="input_data">Ingresa tus datos para iniciar</string>
    <string name="mensage">Mensaje</string>
    <string name="agregar">Agregar</string>
    <string name="delete">Eliminar sticker</string>
    <string name="about">Floppy es un proyecto que desea obtener un parecido a aplicaciones de chat tipo whatsapp y telegram 🤑\n\nQue la disfrutes :)</string>

    <string-array name="frases">
        <item>Soy Floppy</item>
        <item>¿Como estas?</item>
        <item>💤</item>
        <item>eso tilin</item>
        <item>😴</item>
        <item>Bienvenido</item>
        <item>uwu</item>
        <item>👀</item>
        <item>👉👈</item>
        <item>💩</item>
    </string-array>

    <string name="url">Url</string>
    <string name="cancelar">Cancelar</string>
    <string name="addAllStickers">¿Quieres añadir los stickers?</string>
    <string name="update">Modificación</string>
    <string name="accept">Aceptar</string>
    <string name="stopRecord">Toca cualquier parte\npara detener la grabación</string>
    <string name="wait_audio">Espera a que se envie el audio</string>
    <string name="permission">Debes habilitar los permisos\npara utilizar esta función</string>
    <string name="noExistUser">Usuario no existe</string>
    <string name="existEmail">No se pudo registrar\n(Puede que ya exista ese Email)</string>
    <string name="noRegisterData">No se pudo registrar los datos</string>
    <string name="errorGetData">Hubo un error \nal obtener los estados</string>
    <string name="empty_chat">No has enviado mensajes...</string>
    <string name="send_message">Envia un mensaje :)</string>
    <string name="name_user">Nombre</string>
    <string name="points">...</string>
    <string name="fondo">fondo</string>
    <string name="defaul_pictures">Por defecto</string>
    <string name="pictures_user">tus fotos</string>
    <string name="choose_color">Cambiar color</string>
    <string name="im_genes">Imágenes</string>
    <string name="connection_establecida">Conexión establecida</string>
    <string name="sin_connection">Sin conexión</string>

</resources>