<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/gris4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_2dp"
                android:gravity="center"
                android:text="@string/addSticker"
                android:textSize="@dimen/_25sp" />

            <ImageView
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_200dp"
                android:id="@+id/imgStickerAdd"
                android:layout_gravity="center"
                android:src="@drawable/no_image" />

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginRight="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_2dp"
                android:text="@string/howAddSticker"
                android:textSize="@dimen/_15sp" />

            <EditText
                style="@style/subtitle"
                android:id="@+id/txtUrlSticker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55dp"
                android:layout_margin="@dimen/_15dp"
                android:background="@drawable/edit_login"
                android:hint="@string/url"
                android:inputType="textUri"
                android:lines="1"
                android:paddingLeft="@dimen/_15dp"
                android:textSize="@dimen/_15sp" />

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginRight="@dimen/_15dp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_15dp"
                android:text="@string/poor"
                android:textSize="@dimen/_10sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/ButtonLogin"
                    android:id="@+id/btnAddSticker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_marginRight="@dimen/_15dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_redondeado"
                    android:text="@string/agregar" />

                <Button
                    style="@style/ButtonLogin"
                    android:id="@+id/btnDownload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_marginRight="@dimen/_15dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_weight="1"

                    android:textColor="@color/black"
                    android:backgroundTint="@color/verde"
                    android:background="@drawable/boton_redondeado"
                    android:text="@string/downloadFloppySticker" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>