<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris4"
    android:orientation="vertical"
    android:padding="@dimen/_15dp">

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addSticker"
        android:textSize="@dimen/_25sp" />

    <TextView
        style="@style/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:layout_marginBottom="@dimen/_15dp"
        android:gravity="center"
        android:text="@string/addAllStickers"
        android:textSize="@dimen/_15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15dp"
            android:layout_marginRight="@dimen/_15dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@drawable/boton_redondeado"
            android:text="@string/cancelar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:id="@+id/progress"
                android:visibility="gone"
                android:indeterminateTint="@color/verde"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/btnAccept"
                style="@style/ButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginRight="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/boton_redondeado"
                android:backgroundTint="@color/verde"
                android:text="@string/agregar"
                android:textColor="@color/black" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>