<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/gris4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:gravity="center"
                android:text="@string/update"
                android:textSize="@dimen/_25sp" />


            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginRight="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_2dp"
                android:text="Modifica el apodo de tu amigo"
                android:textSize="@dimen/_15sp" />

            <EditText
                style="@style/subtitle"
                android:id="@+id/txtNickFriend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55dp"
                android:layout_margin="@dimen/_15dp"
                android:background="@drawable/edit_login"
                android:hint="@string/nick"
                android:inputType="textUri"
                android:lines="1"
                android:paddingLeft="@dimen/_15dp"
                android:textSize="@dimen/_15sp" />


                <Button
                    style="@style/ButtonLogin"
                    android:id="@+id/btnAccept"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_marginRight="@dimen/_15dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_redondeado"
                    android:text="@string/accept" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>