<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        tools:context=".ui.login.LoginActivity">

        <RelativeLayout
            android:id="@+id/layoutBotonValidacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Ingresar"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Codigo"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_fondo_login" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_fondo_login"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_marginRight="@dimen/_25dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutEditLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_anim_cascada"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/registro"
                        android:textSize="@dimen/_40sp" />

                    <TextView
                        style="@style/subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/input_data"
                        android:textSize="@dimen/_15sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txtEmail"
                                style="@style/EdittextLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="25dp"
                                android:background="@drawable/edit_login"
                                android:drawableStart="@drawable/ic_user"
                                android:drawablePadding="10dp"
                                android:fontFamily="@font/roboto_medium"
                                android:hint="@string/email_user"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:padding="10dp" />

                            <EditText
                                android:id="@+id/txtPass"
                                style="@style/EdittextLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="25dp"
                                android:background="@drawable/edit_login"
                                android:drawableStart="@drawable/ic_key"
                                android:drawablePadding="10dp"
                                android:fontFamily="@font/roboto_medium"
                                android:hint="@string/pass_user"
                                android:inputType="textPassword"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:padding="10dp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <ProgressBar
                            android:id="@+id/progressLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:indeterminate="true"
                            android:indeterminateTint="@color/naranja"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:id="@+id/layoutButtons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnLogin"
                                style="@style/ButtonLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginRight="@dimen/_10dp"
                                android:layout_weight="1"
                                android:background="@drawable/boton_redondeado"
                                android:drawableEnd="@drawable/ic_send"
                                android:drawablePadding="15dp"
                                android:drawableTint="@color/white"
                                android:text="@string/login" />

                            <Button
                                android:id="@+id/btnRegister"
                                style="@style/ButtonLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_weight="1"
                                android:background="@drawable/boton_redondeado"
                                android:drawableEnd="@drawable/ic_send"
                                android:drawablePadding="15dp"
                                android:drawableTint="@color/white"
                                android:text="@string/register" />
                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutInfoApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_anim_cascada"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/Bienvenido"
                        android:textSize="@dimen/_40sp" />

                    <TextView
                        style="@style/subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textSize="@dimen/_15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25dp"
                        android:layout_marginBottom="@dimen/_30dp"
                        android:src="@drawable/ic_decoracion_puntos" />

                    <Button
                        android:id="@+id/btnComenzar"
                        style="@style/ButtonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15dp"
                        android:background="@drawable/boton_redondeado"
                        android:text="@string/comenzar" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <include
            android:id="@+id/includeInput"
            layout="@layout/input_user"
            android:visibility="invisible" />

        <include
            android:id="@+id/splash"
            layout="@layout/splash" />
    </RelativeLayout>
</layout>