<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isDefault"
            type="String" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondo"
            android:orientation="vertical"
            tools:context=".ui.wallpapers.WallpapersFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_55dp"
                    android:layout_height="@dimen/_55dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_15dp"
                    android:src="@drawable/ic_floppy"
                    app:tint="@color/naranja" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/christmas_cat"
                        android:gravity="center_vertical"
                        android:letterSpacing="0.1"
                        android:text="@string/app_name"
                        android:textColor="@color/blanco1"
                        android:textSize="@dimen/_30sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <Button
                    android:id="@+id/btnDefault"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_redondeado"
                    android:backgroundTint="@{isDefault.equals(`default`)? @color/naranja:@color/fondo,default=@color/naranja}"
                    android:text="@string/defaul_pictures"
                    android:textSize="@dimen/_15sp" />
                <Button
                    android:id="@+id/btnRemotes"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_redondeado"
                    android:backgroundTint="@{isDefault.equals(`Remotes`)? @color/naranja:@color/fondo,default=@color/fondo}"
                    android:text="@string/im_genes"
                    android:textSize="@dimen/_15sp" />

                <Button
                    android:id="@+id/btnAll"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_redondeado"
                    android:backgroundTint="@{isDefault.equals(`gallery`)? @color/naranja:@color/fondo,default=@color/fondo}"
                    android:text="@string/pictures_user"
                    android:textSize="@dimen/_15sp" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerWallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{isDefault.equals(`default`)? View.VISIBLE : View.GONE}"
                    android:nestedScrollingEnabled="false" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerWallpaperUser"
                    android:layout_width="match_parent"
                    android:visibility="@{isDefault.equals(`gallery`)|| isDefault.equals(`Remotes`)? View.VISIBLE : View.GONE}"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />


            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
